# dict-editor

./: README.md  dict_editor.py  main-ok.py  main.py  pyproject.toml
.github/: FUNDING.yml
src/dicteditor/: deditor.py  resources.py  resources.qrc
