[project]
name = "dicteditor"
version = "0.0.1"
authors = [
  { name="Danilo Tardioli", email="dantard@unizar.es" },
]
description = "A simple dictionary editor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL 3.0 License",
    "Operating System :: Linux",
]

dependencies = [
    "pyqt5",
    "pyyaml",
    "easyconfig@git+https://github.com/dantard/easyconfig.git",
]


[project.urls]
Homepage = "https://github.com/dantard/dict-editor"
Issues = "https://github.com/dantard/dict-editor/issues"

[project.scripts]
dict-editor = "dicteditor.deditor:main"